# googletest-Taxxing

./: CMakeLists.txt  README.md  main.cpp
include/: Taxiing.h  Taximeter.h
src/: Taxiing.cpp  Taximeter.cpp  TestPractice.cpp  TestPractice_daytime.cpp  TestPractice_nighttime.cpp
